--- a/src/home.html
+++ b/src/home.html
@@ -6,6 +6,9 @@
     <div class="wrapper">
       @@include('html/_header.htm',{})
       <main data-fp class="page">
+
+
+
         <section data-fp-section class="Demo">
           <div class="Demo__container">
             <div class="textWrap">
@@ -287,28 +290,30 @@
           </div>
           <div class="footer">
             <div class="footer__container">
-              <div>
-                <p>Navigation</p>
-                <div class="listwrap">
-                  <ul class="footer__list">
-                    <li class="list__item">Welcome</li>
-                    <li class="list__item">How it Works</li>
-                  </ul>
-                  <ul class="footer__list">
-                    <li class="list__item">About Us</li>
-                    <li class="list__item">Join Waitlist</li>
-                  </ul>
+              <div class="bb">
+                <div class="">
+                  <p>Navigation</p>
+                  <div class="listwrap">
+                    <ul class="footer__list">
+                      <li class="list__item">Welcome</li>
+                      <li class="list__item">How it Works</li>
+                    </ul>
+                    <ul class="footer__list">
+                      <li class="list__item">About Us</li>
+                      <li class="list__item">Join Waitlist</li>
+                    </ul>
+                  </div>
                 </div>
-                <div class="copiright">
-                  <img src="@img/svg/logo.svg" alt="" /><span
-                    >© 2024 myMechanic, Inc. ®</span
-                  >
-                </div>
-              </div>
-              <div>
                 <div class="footer__contact">
                   <p>Contacts</p>
                   <h2>info@mymechanic.app</h2>
+                </div>
+              </div>
+              <div class="bb">
+                <div class="copiright">
+                  <img src="@img/svg/logo.svg" alt="" /><span
+                >© 2024 myMechanic, Inc. ®</span
+                >
                 </div>
                 <button class="footer__button">Schedule a Demo</button>
               </div>
