--- a/src/home.html
+++ b/src/home.html
@@ -47,12 +47,14 @@
                     class="arrow_left"
                     src="@img/svg/arrow_Slide.svg"
                     alt=""
+                    id="arrow_left"
                   />
                   <span class="bigger number fade">01</span>/04
                   <img
                     class="arrow_right"
                     src="@img/svg/arrow_Slide.svg"
                     alt=""
+                    id="arrow_right"
                   />
                 </div>
               </div>
